--- a/Weekly Tasks/Week_03_02.md
+++ b/Weekly Tasks/Week_03_02.md
@@ -2,5 +2,7 @@
 
 
 ## Thursday 03/06 ToDo's:
-- [x] Completed Task
-- [ ] Incomplete Task
+- [] Set up Deep Thought Script.
+- [] Set up Script for imagej.
+- [] Set up Script for opencv.
+
